# adversarial-evaluator-library

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md  SETUP.md  project  pyproject.toml
.adversarial/: config.yml
.adversarial/docs/: EVALUATION-WORKFLOW.md
.adversarial/evaluators/: gemini-pro.yml
.adversarial/inputs/: AEL-0013-code-review-input.md
.adversarial/scripts/: evaluate_plan.sh  proofread_content.sh  review_implementation.sh
.agent-context/: 2025-11-26-SESSION-HANDOVER.md  AEL-0001-HANDOFF-feature-developer.md  AEL-0002-HANDOFF-test-runner.md  AEL-0004-HANDOFF-ci-checker.md  AEL-0005-HANDOFF-feature-developer.md  AEL-0006-HANDOFF-feature-developer.md  AEL-0006-REVIEW-STARTER.md  AEL-0011-HANDOFF-feature-developer.md  ASK-0025-HANDOFF-feature-developer.md  ASK-0027-HANDOFF-feature-developer.md  ASK-0027-REVIEW-STARTER.md  ONBOARDING-STATE.md  PR-4-REVIEW-STARTER.md  REVIEW-INSIGHTS.md  agent-handoffs.json  current-state.json
.agent-context/reviews/: AEL-0006-review.md
.agent-context/workflows/: AGENT-CREATION-WORKFLOW.md  COMMIT-PROTOCOL.md
.claude/agents/: AGENT-TEMPLATE.md  OPERATIONAL-RULES.md  TASK-STARTER-TEMPLATE.md  agent-creator.md  ci-checker.md  code-reviewer.md  coordinator.md  document-reviewer.md  feature-developer-v3.md  feature-developer.md  onboarding.md  planner.md  planner2.md  powertest-runner.md  rem.md  security-reviewer.md  test-runner.md  tycho.md
.claude/commands/: check-ci.md
.dispatch/: bus.jsonl
.github/workflows/: sync-to-linear.yml  test.yml
.kit/adr/: KIT-ADR-0001-system-prompt-size-considerations.md  KIT-ADR-0003-linear-sync-vs-mcp.md  KIT-ADR-0006-agent-session-initialization.md  KIT-ADR-0012-task-status-linear-alignment.md  KIT-ADR-0013-realtime-task-monitoring.md  KIT-ADR-0014-code-review-workflow.md  KIT-ADR-0018-workflow-observation.md  KIT-ADR-0019-review-knowledge-extraction.md  KIT-ADR-0020-research-quality-coupling-strategy.md
.kit/context/: 2025-11-26-SESSION-HANDOVER.md  2025-11-27-SESSION-HANDOVER.md  2025-11-28-LINEAR-SYNC-ONBOARDING-CHECKLIST.md  AEL-0001-HANDOFF-feature-developer.md  AEL-0002-HANDOFF-test-runner.md  AEL-0004-HANDOFF-ci-checker.md  AEL-0005-HANDOFF-feature-developer.md  AEL-0006-HANDOFF-feature-developer.md  AEL-0006-REVIEW-STARTER.md  AEL-0013-HANDOFF-feature-developer.md  AEL-0013-REVIEW-STARTER.md  PR-4-REVIEW-STARTER.md  agent-handoffs.json
.kit/context/retros/: AEL-0013-retro.md
.kit/context/reviews/: AEL-0006-review.md  AEL-0013-evaluator-review.md  PR-4-review-round2.md  PR-4-review.md
.kit/context/templates/: review-starter-template.md
.kit/context/workflows/: AGENT-CREATION-WORKFLOW.md  COMMIT-PROTOCOL.md  REVIEW-FIX-WORKFLOW.md  TASK-COMPLETION-PROTOCOL.md  TESTING-WORKFLOW.md
.kit/launchers/: launch  onboarding  preflight
.kit/tasks/3-in-progress/: AEL-0013-kit-migration.md
.kit/tasks/4-in-review/: AEL-0013-kit-migration.md
.kit/tasks/5-done/: AEL-0001-write-project-readme.md  AEL-0002-run-smoke-tests.md  AEL-0003-ci-workflow-pr-validation.md  AEL-0004-verify-ci-workflow.md  AEL-0005-phase1-evaluator-implementation.md  AEL-0006-add-model-requirement-to-evaluators.md  AEL-0013-kit-migration.md  ASK-0003-gh-cli-default-repo.md  (+9 more)
.kit/templates/: AGENT-TEMPLATE.md  OPERATIONAL-RULES.md  TASK-STARTER-TEMPLATE.md
.serena/: setup-serena.sh
.serena/claude-code/: CONTEXT-CHANGE-CHECKLIST.md  CONTEXT-CONFIGURATION-GUIDE.md  SETUP-GUIDE.md  TYPESCRIPT-SETUP.md  USE-CASES.md  verify-serena.sh
agents/: launch
compositions/: adversarial-trio.yml  high-stakes-panel.yml  quick-then-deep.yml
docs/: AGENT-INTEGRATION.md  COGNITIVE-DIVERSITY.md  EVALUATOR-TESTING-GUIDE.md  SELECTION-GUIDE.md  TESTING.md  UPSTREAM-CHANGES-2025-01-28.md
docs/adr/: ADR-0001-evaluator-testing-strategy.md  README.md
docs/agentive-development/: 00-introduction.md  OUTLINE.md  PROGRESS-SUMMARY.md  README.md
docs/guides/: CROSS-PROVIDER-EVALUATION.md
docs/verification/: 2026-02-06-resolver-bug-feedback.md  2026-02-06-verdict-validation-feedback.md  2026-02-06-workflow-v0.9.0-verification.md  2026-02-08-evaluator-discovery-feedback.md  TESTING-PROCEDURE.md
evaluators/: index.json
providers/: registry.yml
scripts/: launch  linear_sync_utils.py  project  sync_tasks_to_linear.py  validate_task_status.py
scripts/core/: check-bots.sh  gh-review-helper.sh  preflight-check.sh  project  wait-for-bots.sh
scripts/local/: verify-v0.4.0.sh
scripts/optional/: linear_sync_utils.py  sync_tasks_to_linear.py
tests/: test_code_evaluators.py  test_evaluators.py  test_linear_sync.py  test_logging.py  test_template.py
tests/integration/: test_v040_verification.py
tests/results/: .gitignore  README.md
(+150 files in other folders)
