# Project configuration for Python projects using the Agentive Starter Kit
# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "your-project-name"  # TODO: Change this to your project name
version = "0.1.0"
description = "Your project description"  # TODO: Update description
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},  # TODO: Update author
]
dependencies = []  # Add runtime dependencies as needed

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Prevent auto-discovery of non-Python directories (agents/, delegation/)
# Add your packages here when you create them, e.g.: packages = ["your_project"]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E203", "W503"]

[tool.ruff.isort]
known-first-party = ["your_project"]  # TODO: Change to your package name

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
source = ["your_project"]  # TODO: Change to your package name
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
